--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
-asgiref==3.7.2
+asgiref==3.8.1
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 cryptography==42.0.5
 defusedxml==0.7.1
-Django==5.0.3
+Django==5.0.4
 django-allauth==0.61.1
 django-environ==0.11.2
 idna==3.6
 oauthlib==3.2.2
-pillow==10.2.0
+pillow==10.3.0
+psycopg2==2.9.9
 pycparser==2.22
 PyJWT==2.8.0
 python3-openid==3.2.0
 requests==2.31.0
 requests-oauthlib==2.0.0
 sqlparse==0.4.4
-typing_extensions==4.10.0
+typing_extensions==4.11.0
 urllib3==2.2.1
