--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,18 @@ defusedxml==0.7.1
 Django==5.0.4
 django-allauth==0.61.1
 django-environ==0.11.2
+Faker==24.11.0
 idna==3.6
 oauthlib==3.2.2
 pillow==10.3.0
 psycopg2==2.9.9
 pycparser==2.22
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python3-openid==3.2.0
 requests==2.31.0
 requests-oauthlib==2.0.0
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.11.0
 urllib3==2.2.1
